# PantheonUI

./: .gitignore  README.md  constants.py  folder_paths.py  func_api.py  func_birefnet.py  func_download.py  func_helper.py  func_image.py  func_sam.py  latent_preview.py  node_helpers.py  nodes.py  pantheon.ipynb  requirements.txt  widgets.py
custom_nodes/Florence2/: README.md  nodes.py  pyproject.toml
custom_nodes/LTXVideo/: .pre-commit-config.yaml  README.md  __init__.py  img2vid.py  loader_node.py  model.py  nodes_registry.py  pyproject.toml  requirements.txt  stg.py  t5_encoder.py  transformer.py  vae.py
custom_nodes/advanced_controlnet/: README.md
custom_nodes/crop_and_stitch/: README.md  inpaint-cropandstitch_flux_example_workflow.json  inpaint_cropandstitch.py  pyproject.toml
custom_nodes/crop_and_stitch/js/: showcontrol.js
custom_nodes/gguf/: loader.py  ops.py
custom_nodes/ic_light/: README.md  nodes.py  pyproject.toml
custom_nodes/ic_light/utils/: patches.py
custom_nodes/pantheon-gguf/: README.md  __init__.py  nodes.py  requirements.txt
pantheon/: cli_args.py  clip_model.py  clip_vision.py  conds.py  controlnet.py  diffusers_load.py  gligen.py  hooks.py  lora.py  model_base.py  model_detection.py  model_management.py  model_patcher.py  model_sampling.py  ops.py  sample.py  sampler_helpers.py  samplers.py  sd.py  sd1_clip.py  sdxl_clip.py  supported_models.py  supported_models_base.py  utils.py
pantheon/cldm/: cldm.py  dit_embedder.py  mmdit.py
pantheon/k_diffusion/: sampling.py
pantheon/ldm/: common_dit.py
pantheon_extras/: nodes_advanced_samplers.py  nodes_audio.py  nodes_canny.py  nodes_compositing.py  nodes_cond.py  nodes_controlnet.py  nodes_cosmos.py  nodes_custom_sampler.py  nodes_flux.py  nodes_hooks.py  nodes_hunyuan.py  nodes_hypernetwork.py  nodes_images.py  nodes_latent.py  nodes_lora_extract.py  nodes_lt.py  nodes_mask.py  nodes_mochi.py  nodes_model_advanced.py  nodes_model_downscale.py  nodes_model_merging.py  nodes_model_merging_model_specific.py  nodes_morphology.py  nodes_pag.py  nodes_perpneg.py  nodes_photomaker.py  nodes_post_processing.py  nodes_sag.py  nodes_sd3.py  nodes_sdupscale.py  nodes_slg.py  nodes_stable3d.py  nodes_stable_cascade.py  nodes_upscale_model.py  nodes_video_model.py
(+83 files in other folders)
