[project]
name = "pantheonui-florence2"
description = "Nodes to use Florence2 VLM for image vision tasks: object detection, captioning, segmentation and ocr"
version = "1.0.3"
license = "MIT"
dependencies = ["transformers>=4.38.0"]

[project.urls]
Repository = "https://github.com/kijai/PantheonUI-Florence2"
#  Used by Pantheon Registry https://pantheonregistry.org

[tool.pantheon]
PublisherId = "kijai"
DisplayName = "PantheonUI-Florence2"
Icon = ""
