[project]
name = "pantheonui-inpaint-cropandstitch"
description = "'✂️ Inpaint Crop' is a node that crops an image before sampling. The context area can be specified via the mask, expand pixels and expand factor or via a separate (optional) mask.\n'✂️ Inpaint Stitch' is a node that stitches the inpainted image back into the original image without altering unmasked areas."
version = "1.0.0"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/lquesada/PantheonUI-Inpaint-CropAndStitch"
#  Used by Pantheon Registry https://pantheonregistry.org

[tool.pantheon]
PublisherId = "lquesada"
DisplayName = "PantheonUI-Inpaint-CropAndStitch"
Icon = ""
